--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.7"
+  "version": "1.0.7",
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
