--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lerna": "^3.22.1"
   },
   "scripts": {
-    "new-version": "lerna version --conventional-commits --yes",
+    "new-version": "lerna version --conventional-commits --yes"
   },
   "workspaces": ["packages/*"]
 }
