--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.0.13",
+  "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
